static/css/base.css
html {
    height: 100%;
}

body {
    background: url('/media/homepage_background_cropped.jpg') no-repeat center center fixed;
    background-size: cover;
    height: calc(100vh - 164px);
    color: #555;
    font-family: 'Shantell Sans', cursive;
}

/* from Bulma */
.icon {
    align-items: center;
    display: inline-flex;
    justify-content: center;
    height: 1.5rem;
    width: 1.5rem;
}

.logo-font {
    text-transform: uppercase;
}

.main-logo-link {
    width: fit-content;
}

.shop-now-button {
    background: #6B793E;
    color: white;
    min-width: 260px;
}

.shop-now-button:hover,
.shop-now-button:active,
.shop-now-button:focus,
.btn-black:hover,
.btn-black:active,
.btn-black:focus {
    background: #222;
    color: white;
}

.text-green {
    color: #6B793E !important
}

/* Navbar */

header {
    background-color: #E9EDC9;
}

.navbar {
    flex-direction: column;
}

.phone-view {
    display: flex;
    flex-flow: row wrap;
    justify-content: space-between;
    width: 100%;
}

.navbar-toggler {
    display: flex;
    align-self: center;
}

.phone-view ul {
    display: flex;
    flex-direction: row;
    align-self: flex-end;
    justify-content: right;
    margin-bottom: 0;
}

.search-bar {
    min-width: 20rem;
    left: auto;
    right: 0px;
}

/*****************/
/* Home page */
/*****************/

.carousel {
    height: 400px;
}

.carousel-inner {
    height: inherit;
}

.carousel-item {
    height: inherit;
}

.carousel-img1 {
    background: url('https://scontent-dub4-1.xx.fbcdn.net/v/t39.30808-6/317241915_479100194324310_1898952404562974442_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=8bfeb9&_nc_ohc=9ZQaNWvlWb8AX-3iGLx&_nc_ht=scontent-dub4-1.xx&oh=00_AfC9_q9OYyUccSJKE2VL5D2LlUzFjDDhz_ZBG2c4YQqBNg&oe=640BD28E') no-repeat center center;
    background-size: cover;
}

.carousel-img2 {
    background: url('https://scontent-dub4-1.xx.fbcdn.net/v/t39.30808-6/320743824_880084756771553_6827135769749912811_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=8bfeb9&_nc_ohc=Il9AymocoyAAX_lXyVp&_nc_ht=scontent-dub4-1.xx&oh=00_AfB90WsBxpAZPSGyNr4kV_nwoAWGd8HeoS0wbi24MwFGFw&oe=640BDAB0') no-repeat center center;
    background-size: cover;
}

.carousel-img3 {
    background: url('https://scontent-dub4-1.xx.fbcdn.net/v/t39.30808-6/314416138_465098155724514_1999875988834954854_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=8bfeb9&_nc_ohc=gz6zlSqlTAkAX-Si7ws&_nc_ht=scontent-dub4-1.xx&oh=00_AfAzvPMWdfhy-35vJvsTxLVEnGCFF6YM5CIgen89lcgGJw&oe=640AB272') no-repeat center center;
    background-size: cover;
}

.carousel-caption {
    width: 100%;
    right: 0;
    bottom: 0px;
    left: 0;
    padding-bottom: 20px;
    background-color: rgb(204, 213, 174, 74%);
}


/*****************/
/* Products page */
/*****************/

.overlay {
    height: 100%;
    width: 100%;
    top: 0;
    left: 0;
    position: fixed;
    background: white;
    z-index: -1;
}

.product-hr {
    width: 5%;
    text-align: center;
}

a.category-badge > span.badge:hover {
    background: #FAEDCD !important;
}

.border {
    border: 1px solid #FAEDCD!important;
}

.btt-button {
    height: 42px;
    width: 42px;
    position: fixed;
    bottom: 10px;
    right: 10px;
}

.btt-link {
    cursor: pointer;
}



/* -------------------------------- Media Queries */

/* Slightly larger container on xl screens */
@media (min-width: 1200px) {
    .container {
        max-width: 80%;
    }
}

@media (max-width: 431px) {
    .phone-view {
        display: flex;
        align-items: baseline;
        flex-wrap: nowrap;
    }

    .phone-view ul {
        padding-left: 0;
    }
}

/* pad the top a bit when navbar is collapsed on mobile */
@media (max-width: 991px) {
    .header-container {
        padding-top: 116px;
    }

    body {
        height: calc(100vh - 116px);
    }
}

